# Smart-Support-Buddy

./: .gitignore  BACKEND_SETUP.md  LICENSE  README.md  SETUP.md  TROUBLESHOOT.md  UV_MIGRATION.md  check_chromadb.py  chroma-config.yaml  chroma.sh  deduplication_plan.md  docker-compose.yml  project_architecture_summary.md  pyproject.toml  requirements.txt  run_backend.py  set_venv.ps1  set_venv.sh  start_backend.ps1  start_backend.sh  start_chromadb.ps1  start_chromadb_server.sh  start_frontend.ps1  start_frontend.sh  test.msg
backend/: .env.example  Dockerfile  LearnChromaDB.py  pyproject.toml  pytest.ini  test_chromadb_connection.py
backend/app/: __init__.py  main.py
backend/app/api/: api.http  routes.py  sample1.msg
backend/app/core/: __init__.py  config.json  config.py  logging_config.py  similarity_config.json
backend/app/db/: database.py  models.py  sql_models.py
backend/app/models/: __init__.py  models.py
backend/app/services/: chroma_client.py  collection_service.py  confluence_page_service.py  confluence_service.py  deduplication_utils.py  embedding_service.py  faiss_client.py  issue_service.py  jira_service.py  llm_service.py  msg_parser.py  rerank_service.py  stackoverflow_qa_service.py  stackoverflow_service.py  unified_rag_service.py  vector_issue_service.py  vector_service.py
backend/app/utils/: bm25_utils.py  dspy_utils.py  llm_augmentation.py  rag_pipeline.py  rag_utils.py  retrievers.py  similarity.py
backend/tests/: conftest.py  test_api.py  test_jira_service.py  test_msg_parser.py  test_vector_service.py
confluence-config/: server.xml
(+53 files in other folders)
